--- a/App.css
+++ b/App.css
@@ -98,18 +98,19 @@
 .item{
   cursor: pointer;
 }
-.item .image img{
+.item .image img {
   width: 201px !important;
-    height: 275px;
+  height: 250px;
 }
 .image-tag{
+  width: 98%;
   color: rgb(56, 102, 223);
-  font-size: 12px;
+  font-size: 11px;
   border: 1px solid rgb(56, 102, 223);
   position: absolute;
   top: 0px;
   margin-left: 8px;
-  padding: 3px 7px;
+  padding: 3px 6px;
 }
 .card-img img{
   max-width: 100% !important;
@@ -118,9 +119,9 @@
 .sideImage{
   display: flex;
 }
-.sideImage img{
-  width: 238px;
-  height: 209px;
+.sideImage img {
+  width: 100%;
+  height: 211px;
 }
 
 .owl-theme .owl-nav.disabled + .owl-dots {
@@ -137,7 +138,7 @@
   width: 27px !important;
   /* position: absolute; */
   height: 3px !important;
-  margin: 5px 6px !important;
+  margin: 5px 3px !important;
   background: #ffffff;
   display: block;
   -webkit-backface-visibility: visible;
@@ -152,7 +153,7 @@
 
 .mylist{
   display: flex;
-  padding: 0 !important;
+  padding: 10px 0 0 !important;
   justify-content: flex-start;
   align-items: center;
 }
@@ -162,9 +163,10 @@
   /* color: #4CAF50; */
   color: rgb(56, 102, 223) !important;
   /* color: white; */
-  padding: 5px 10px;
+  padding: 5px 40px 5px 25px;
   font-weight: bold;
   text-align: left;
+  text-decoration: none;
   font-size: 16px;
   border: none;
   cursor: pointer;
@@ -179,23 +181,35 @@
 .alldropdown-content {
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
+  top: 26px;
+  padding-bottom: 5px;
+  padding-left: 10px;
+  padding-top: 20px;
+  background-color: #fff;
+  min-width: 225px;
+  height: 100vh;
+  box-shadow: 0px 8px 16px 0px rgba(235, 235, 235, 0.2);
+  z-index: 2;
+}
+.alldropbtn:hover{
+  color: blue !important;
 }
 
 /* Links inside the dropdown */
 .alldropdown-content a {
   color: black;
   text-align: left;
-  padding: 12px 16px;
+  text-decoration: none;
+  padding: 9px 8px 8px 14px;
   text-decoration: none;
   display: block;
 }
 
-/* Change color of dropdown links on hover */
-.alldropdown-content a:hover {background-color: #f1f1f1}
+.alldropdown-content a:hover{
+  color: blue !important; 
+}
+
+
 
 /* Show the dropdown menu on hover */
 .alldropdown:hover .alldropdown-content {
@@ -213,7 +227,7 @@
 /* Style The Dropdown Button */
 .mydropbtn {
   /* background-color: #4CAF50; */
-  color: white;
+  color: #000;
   font-weight: bold;
   padding: 5px 10px;
   font-size: 15px;
@@ -231,10 +245,62 @@
 .mydropdown-content {
   display: none;
   position: absolute;
+  left: -240px;
+  top: 20px;
   background-color: #f9f9f9;
-  min-width: 160px;
+  width: 1340px;
+  padding: 15px;
+  height: 480px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
+  z-index: 2;
+}
+
+.men.mydropdown-content{
+  left: -357px;
+
+}
+.women.mydropdown-content{
+  left: -411px;
+
+}
+.home.mydropdown-content{
+  left: -492px;
+
+}
+
+.beauty.mydropdown-content{
+  left: -557px;
+
+}
+.baby.mydropdown-content{
+  left: -744px;
+
+}
+.grocery.mydropdown-content{
+  left: -860px;
+
+}
+
+.sports.mydropdown-content{
+  left: -948px;
+
+}
+
+
+.seller.mydropdown:hover .sellers.mydropdown-content {
+  display: none !important;
+}
+.sell.mydropdown:hover .sells.mydropdown-content {
+  display: none !important;
+}
+
+
+.mycontentheading{
+  padding-top: 10px;
+  font-size: 14px;
+  padding-left: 10px;
+  font-weight: bold;
+  text-transform: uppercase;
 }
 
 /* Links inside the dropdown */
@@ -244,7 +310,18 @@
   text-decoration: none;
   display: block;
 }
+.elctro-list{
+  padding-left: 5px;
+  padding-top: 10px;
+}
+.elctro-list li{
+  list-style: none;
+  margin: 5px 0;
+  padding-left: 10px !important;
+  text-transform: capitalize;
+  padding: 5px 0;
 
+}
 /* Change color of dropdown links on hover */
 .mydropdown-content a:hover {background-color: #f1f1f1}
 
@@ -257,4 +334,71 @@ ul{
   padding: 0 !important;
 }
 
+
+.elctroImages{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.elctroImages img{
+  width: 132px;
+  height: 90px;
+  margin: 3px;
+  border: 1px solid #ebecec;
+}
+.elctroImages li{
+  list-style: none;
+}
 /* Change the background color of the dropdown button when the dropdown content is shown */
+
+.nav-theme.owl-theme .owl-item img {
+  display: block;
+  height: 211px !important;
+  width: 100%;
+}
+
+.all-list {
+  margin: 0px !important;
+  padding: 10px 0 7px !important;
+  border-right: 1px solid rgb(226, 229, 241);
+}
+
+span.icon {
+  position: absolute;
+  right: -30px;
+  top: -6px;
+  font-size: 28px;
+}
+.nav.col-md-2{
+  padding-right: 0px !important;
+}
+
+a:focus, a:hover {
+  color: #000 !important;
+  text-decoration: none !important;
+}
+.image2-large {
+  width: 400px;
+  height: 370px;
+}
+.inercontent-main{
+  display: flex;
+  padding-top: 20px;
+  
+}
+.img2min{
+  margin-left: 10px;
+  width: 220px;
+  height: 370px;
+
+}
+.navs.col-md-8{
+  padding-right: 0 !important;
+}
+.sideImg.col-md-4{
+  padding: 0;
+}
+.recomendHeading{
+  padding-bottom: 20px;
+}
